z-index adjusted,form fields should no longer be displayed ober the header

--- a/src/css/add_task.css
+++ b/src/css/add_task.css
@@ -33,7 +33,9 @@ main {
     gap: 10px;
 }
 
-.add-task-form {}
+.add-task-form {
+    z-index: 1;
+}
 
 .uniform-sizing {
     padding-top: 14px;
